oracle-db-test/oracle-db-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle-db-test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: oracle-db-test
